Fix grid column being too wide
Turns out max-width doesn't actually prevent it from expanding beyond
that!

--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ dl {
 .grid-2col {
     display: grid;
     grid-column-gap: 64px;
-    grid-template-columns: 250px auto;
+    grid-template-columns: 250px minmax(700px, 1300px);
     max-width: 1364px;
     margin: 0 auto;
     padding: 0;
